feat(ai-service): capture business flow before catalog binding
Bind catalog operations by RequirementFlow interaction ids, resolve unique
local catalog matches on capture, and stop asking the reader for UUIDs.